Linked index to stylesheet, configured dropdown menu.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming</title>
+        <link rel="stylesheet" href="base.css">
     </head>
     <body>
         <div id="signin">sign in/register</div>
