Added nav to account, accountedit, and signin pages.

--- a/signIn.html
+++ b/signIn.html
@@ -1,17 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Account</title>
-	<meta charset="utf-8">
-</head>
-<body>
-	<div id="signin">
-		<div id="signinform">
+    <head>
+        <meta charset="utf-8" />
+        <title>Jojo's Dog Grooming</title>
+        <link rel="stylesheet" href="base.css">
+    </head>
+    <body>
+        <div id="signin">sign in/register</div>
+        <nav>
+            <div class="dropdown">
+            <ul>
+                <li>About Us</li>
+                <li>Testimonials</li>
+                <li>Services</li>
+					<div class="dropdowncontent">
+						<p>Pricing</p>
+						<p>Booking</p>
+						<p>FAQs</p>
+					</div>
+                <li>Contact Us</li>
+            </ul>
+            </div>
+        </nav>
+        <header>
+			<h1>Jojo's Dog Grooming</h1>
+		</header>
+        
+		<div id="content">
+            <div id="leftcol">
+				<h2></h2>
+			</div>
+            
+			<div id="rightcol">
+				<h2></h2>
+			</div>
+        </div>
+		<div id="signin">
+			<div id="signinform">
+				<h2>Email:</h2>
+				<p>Email placeholder</p>
+				<br>
+				<h2>Password:</h2>
+				<p>Passwaord placeholder</p>
+			</div>
 		</div>
-	</div>
-	<div id="register">
-		<div id="registerform">
+		<div id="register">
+			<h1>Register</h1>
+			<div id="registerform">
+				<h1>Owner</h1>
+				<h2>Owner Name:</h2>
+				<h2>Phone:</h2>
+				<h2>Email:</h2>
+				<h1>Dog</h1>
+				<h2>Dog Name:</h2>
+				<h2>Breed:</h2>
+				<h2>Dog Name:</h2>
+				<h2>Breed:</h2>
+			</div>
 		</div>
-	</div>
-</body>
+		<footer>
+		
+		</footer>
+    </body>
 </html>
