--- a/accountEdit.html
+++ b/accountEdit.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Account</title>
-	<meta charset="utf-8">
-</head>
-<body>
-	
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Jojo's Dog Grooming</title>
+        <link rel="stylesheet" href="base.css">
+    </head>
+    <body>
+        <div id="signin">sign in/register</div>
+        <nav>
+            <div class="dropdown">
+            <ul>
+                <li>About Us</li>
+                <li>Testimonials</li>
+                <li>Services</li>
+					<div class="dropdowncontent">
+						<p>Pricing</p>
+						<p>Booking</p>
+						<p>FAQs</p>
+					</div>
+                <li>Contact Us</li>
+            </ul>
+            </div>
+        </nav>
+        <header>
+			<h1>Jojo's Dog Grooming</h1>
+		</header>
+        
+		<div id="content">
+            <div id="leftcol">
+				<h2></h2>
+			</div>
+            
+			<div id="rightcol">
+				<h2></h2>
+			</div>
+        </div>
+		<div id="aside">
+		</div>
+		<div id="account">
+		</div>
+		<footer>
+		
+		</footer>
+    </body>
 </html>
