Added link tags

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <nav>
             <div class="dropdown">
                 <ul>
-                    <li>About Us</li>
-                    <li>Testimonials</li>
-                    <li>Services</li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Services</a></li>
 					    <div class="dropdowncontent">
-						    <p>Pricing</p>
-						    <p>Booking</p>
-						    <p>FAQs</p>
+						    <p><a href="#">Pricing</a></p>
+						    <p><a href="#">Booking</a></p>
+						    <p><a hred="#">FAQs</a></p>
 					    </div>
-                    <li>Contact Us</li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
