Fixed links and changed paragraph tags to list items.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						    <ul>
                                 <li><a href="#">Pricing</a></li>
 						        <li><a href="#">Booking</a></li>
-						        <li><a href="#">FAQs</a></li>s
+						        <li><a href="#">FAQs</a></li>
                             </ul>
 					    </div>
                     <li><a href="#">Contact Us</a></li>
