added tables to pricing

--- a/Pricing.html
+++ b/Pricing.html
@@ -35,6 +35,7 @@
         </nav>
 
 		<div id="content">
+            <div id="main">
             <h2 id="price">Pricing</h2>
             <div id="leftcol">
 				<h2>Services offered</h2>
@@ -51,10 +52,9 @@
                     <li>De-Skunking</li>
                 </ul>
 			</div>
-            
-			<div id="rightcol">
+            <div id="middle">
 				<h2>Basics: Bath & Tidy</h2>
-                <ul>
+                <ul id="basics">
                     <li>Brush and Comb Out</li>
                     <li>Deep Cleansing Bath</li>
                     <li>Blow Dry</li>
@@ -62,9 +62,8 @@
                     <li>Foot and Pad Trim</li>
                     <li>Nail Trim</li>
                 </ul>
-                <hr>
                 <table>
-                    <tr colspan="2"><th>Our Pricing</th></tr>
+                    <tr colspan="2"><th>Basics</th></tr>
                     <tr>
                         <td>Small Dogs</td>
                         <td>$30+</td>
@@ -82,7 +81,29 @@
                         <td>$30/hr</td>
                     </tr>
                 </table>
+            </div>
+			<div id="rightcol">
+                <h2>Full Groom</h2>
+                <p id="groom">Our prices vary depending on size,style, and weight of the dogs.
+                   Dogs with curly, wavy, thick, dense, extra dirty, or matted coats
+                   will incur an extra charge.</p>
+                <table>
+                    <tr colspan="2"><th>Full Groom</th></tr>
+                    <tr>
+                        <td>Small Dogs</td>
+                        <td>$50+</td>
+                    </tr>
+                    <tr>
+                        <td>Medium Dogs</td>
+                        <td>$60+</td>
+                    </tr>
+                    <tr>
+                        <td>Large Dogs</td>
+                        <td>$75+</td>
+                    </tr>
+                </table>
 			</div>
+        </div>
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
