--- a/signIn.html
+++ b/signIn.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming</title>
-        <link rel="stylesheet" href="base.css">
+        <link rel="stylesheet" href="Style/Base.css">
     </head>
     <body>
         <div id="signin">sign in/register</div>
@@ -28,36 +28,45 @@
         
 		<div id="content">
             <div id="leftcol">
-				<h2></h2>
+				<div id="signin">
+					<h2>Sign In</h2>
+					<div id="signinform">
+						<form name="signin" method="post" id="signin">
+							<ul>
+								<li><label>Email: </label><input type="text" name="signinemail" id="signinemail" required="required"></li>
+								<li><label>Password: </label><input type="text" name="password" id="password" required="required"></li>
+							</ul>
+						</form>
+						<img src="Images/placeholder.jpg" height="350" width="350" alt="placeholder">
+					</div>
+				</div>
 			</div>
             
 			<div id="rightcol">
-				<h2></h2>
+				<div id="register">
+					<h2>Register</h2>
+					<div id="registerform">
+						<form name="register" method="post" id="register">
+							<ul>
+								<fieldset>
+									<legend>Owner</legend>
+									<li><label>First Name: </label><input type="text" name="firstname" id="firstname" required="required"></li>
+									<li><label>Last Name: </label><input type="text" name="lastname" id="lastname" required="required"></li>
+									<li><label>Phone Number: </label><input type="text" name="phone" id="phone" required="required"></li>
+									<li><label>Email: </label><input type="text" name="email" id="email" required="required"></li>
+								</fieldset>
+								<fieldset>
+									<legend>Dog</legend>
+									<li><label>Dog Name: </label><input type="text" name="dogname" id="dogname" required="required"></li>
+									<li><label>Dog Breed: </label><input type="text" name="dogbreed" id="dogbreed" required="required"></li>
+								</fieldset>
+							</ul>
+							Add Dog
+						</form>
+					</div>
+				</div>
 			</div>
         </div>
-		<div id="signin">
-			<div id="signinform">
-				<h2>Email:</h2>
-				<p>Email placeholder</p>
-				<br>
-				<h2>Password:</h2>
-				<p>Passwaord placeholder</p>
-			</div>
-		</div>
-		<div id="register">
-			<h1>Register</h1>
-			<div id="registerform">
-				<h1>Owner</h1>
-				<h2>Owner Name:</h2>
-				<h2>Phone:</h2>
-				<h2>Email:</h2>
-				<h1>Dog</h1>
-				<h2>Dog Name:</h2>
-				<h2>Breed:</h2>
-				<h2>Dog Name:</h2>
-				<h2>Breed:</h2>
-			</div>
-		</div>
 		<footer>
 		
 		</footer>
