Basic Skeleton for account pages
Copy and pasted register list, still making modifications, but wanted
to get these up anyway.

--- a/account.html
+++ b/account.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Jojo's Dog Grooming</title>
-        <link rel="stylesheet" href="base.css">
+        <title>Jojo's Dog Grooming - Account</title>
+        <link rel="stylesheet" href="Style/base.css">
     </head>
     <body>
         <div id="signin">sign in/register</div>
@@ -32,7 +32,18 @@
 			</div>
             
 			<div id="rightcol">
-				<h2></h2>
+				<h2>Account</h2>
+				<form name="register" method="post" id="register">
+					<ul>
+						<li><label>First Name: </label></li>
+						<li><label>Last Name: </label></li>
+						<li><label>Phone Number: </label></li>
+						<li><label>Email: </label></li>
+						<li><label>Dog Name: </label></li>
+						<li><label>Dog Breed: </label></li>
+					</ul>
+					Add Dog
+				</form>
 			</div>
         </div>
 		<div id="aside">
