--- a/signIn.html
+++ b/signIn.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Jojo's Dog Grooming</title>
+        <title>Jojo's Dog Grooming - Sign In/Register</title>
         <link rel="stylesheet" href="Style/Base.css">
     </head>
     <body>
