--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@
 		<div id="content">
             <div id="leftcol">
 				<h2>Welcome</h2>
+				<p>Maecenas vel nibh felis. Sed vel enim vel nunc sagittis pharetra at at magna. Vestibulum eu nisl massa. Fusce rhoncus dignissim eros ac sagittis. Cras condimentum felis non est pulvinar fringilla. Duis in dignissim leo, ac consectetur mauris. Aliquam hendrerit, lectus vitae convallis porttitor, nunc justo semper sem, a tristique mauris enim cursus tortor. Mauris sit amet scelerisque nunc. Nam molestie porttitor lorem vel scelerisque. In quis euismod nulla. Aliquam volutpat metus at ex tristique consectetur. Aliquam aliquet bibendum ante in luctus. Nulla convallis urna nec tempus luctus. In eget lectus euismod, semper diam ac, posuere metus.
+					<br>
+					<br>
+Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ultrices ante. Aenean sit amet tortor elit. Curabitur et dui sed odio rhoncus mollis non a erat. Nam vitae lacus tincidunt neque accumsan aliquam in et ipsum. Nam lobortis, odio non varius maximus, ex neque viverra quam, eget sollicitudin sapien erat ac tellus. Phasellus lobortis porttitor nibh, eget ullamcorper justo consectetur id.
+				</p>
 			</div>
             
 			<div id="rightcol">
 				<h2>News</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut venenatis erat non iaculis malesuada. Vestibulum porttitor euismod dolor eget dignissim. Nulla elementum tellus ac ante sollicitudin volutpat. Mauris fringilla velit nec sem porttitor, placerat rhoncus felis aliquet. Phasellus tristique quis nunc sit amet consequat. Suspendisse potenti. Praesent sodales enim vitae suscipit viverra. Vivamus vel mollis purus. Morbi non libero id quam vehicula tincidunt. Suspendisse interdum est turpis, convallis fermentum ex ornare vel. Vivamus pellentesque enim nec erat aliquam tincidunt.
+					<br>
+					<br>
+Maecenas vel nibh felis. Sed vel enim vel nunc sagittis pharetra at at magna. Vestibulum eu nisl massa. Fusce rhoncus dignissim eros ac sagittis. Cras condimentum felis non est pulvinar fringilla. Duis in dignissim leo, ac consectetur mauris. Aliquam hendrerit, lectus vitae convallis porttitor, nunc justo semper sem, a tristique mauris enim cursus tortor. Mauris sit amet scelerisque nunc. Nam molestie porttitor lorem vel scelerisque. In quis euismod nulla. Aliquam volutpat metus at ex tristique consectetur. Aliquam aliquet bibendum ante in luctus. Nulla convallis urna nec tempus luctus. In eget lectus euismod, semper diam ac, posuere metus.
+				</p>
 			</div>
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
