Updates to account and sign in pages
minor changes to index.

--- a/account.html
+++ b/account.html
@@ -28,7 +28,7 @@
         
 		<div id="content">
             <div id="leftcol">
-				<h2></h2>
+				<img src="images/placeholder.jpg">
 			</div>
             
 			<div id="rightcol">
@@ -42,7 +42,7 @@
 						<li><label>Dog Name: </label></li>
 						<li><label>Dog Breed: </label></li>
 					</ul>
-					Add Dog
+					<a href="accountEdit.html">Edit Account</a>
 				</form>
 			</div>
         </div>
@@ -51,7 +51,8 @@
 		<div id="account">
 		</div>
 		<footer>
-		
+		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
+        </div>
     </body>
 </html>
