--- a/accountEdit.html
+++ b/accountEdit.html
@@ -28,7 +28,7 @@
         
 		<div id="content">
             <div id="leftcol">
-				<h2></h2>
+				<img src="images/placeholder.jpg">
 			</div>
             
 			<div id="rightcol">
@@ -37,18 +37,25 @@
 					<ul>
 						<fieldset>
 							<legend>Owner</legend>
-							<li><label>First Name: </label><input type="text" name="firstname" id="firstname" required="required"></li>
-							<li><label>Last Name: </label><input type="text" name="lastname" id="lastname" required="required"></li>
-							<li><label>Phone Number: </label><input type="text" name="phone" id="phone" required="required"></li>
-							<li><label>Email: </label><input type="text" name="email" id="email" required="required"></li>
+							<li><label>First Name:</label></li>
+							<li><input type="text" name="firstname" id="firstname" required="required"></li>
+							<li><label>Last Name:</label></li>
+							<li><input type="text" name="lastname" id="lastname" required="required"></li>
+							<li><label>Phone Number:</label></li>
+							<li><input type="text" name="phone" id="phone" required="required"></li>
+							<li><label>Email:</label></li>
+							<li><input type="text" name="email" id="email" required="required"></li>
 						</fieldset>
 						<fieldset>
 							<legend>Dog</legend>
-							<li><label>Dog Name: </label><input type="text" name="dogname" id="dogname" required="required"></li>
-							<li><label>Dog Breed: </label><input type="text" name="dogbreed" id="dogbreed" required="required"></li>
+							<li><label>Dog Name: </label></li>
+							<li><input type="text" name="dogname" id="dogname" required="required"></li>
+							<li><label>Dog Breed: </label></li>
+							<li><input type="text" name="dogbreed" id="dogbreed" required="required"></li>
+							<input type="submit" value="Add Dog">
 						</fieldset>
 					</ul>
-					Add Dog
+					<input type="submit" value="Save Changes">
 				</form>
 			</div>
         </div>
@@ -57,7 +64,8 @@
 		<div id="account">
 		</div>
 		<footer>
-		
+		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
+        </div>
     </body>
 </html>
