Added links to signin and account pages

--- a/signIn.html
+++ b/signIn.html
@@ -19,16 +19,16 @@
             <div class="dropdown">
                 <ul id="nav">
                     <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#" id="drop">Services</a>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
 						    <ul>
-                                <li><a href="#">Pricing</a></li>
-					            <li><a href="#">Booking</a></li>
-					            <li><a href="#">FAQs</a></li>
+                                <li><a href="pricing.html">Pricing</a></li>
+					            <li><a href="booking.html">Booking</a></li>
+					            <li><a href="faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
@@ -72,6 +72,12 @@
 									<br>
 									<li><label>Email:</label></li>
 									<li><input type="text" name="email" id="email" required="required"></li>
+									<br>
+									<li><label>Password:</label></li>
+									<li><input type="text" name="pass" id="pass" required="required"></li>
+									<br>
+									<li><label>Confirm Password:</label></li>
+									<li><input type="text" name="confirmpass" id="confirmpass" required="required"></li>
 								</fieldset>
 								<fieldset>
 									<legend>Dog</legend>
