Password now hidden

--- a/signIn.html
+++ b/signIn.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Jojo's Dog Grooming</title>
+        <title>Jojo's Dog Grooming - Sign In/Register</title>
         <link rel="stylesheet" href="style/base.css">
     </head>
     
@@ -44,7 +44,7 @@
 								<li><input type="text" name="signinemail" id="signinemail" required="required"></li>
 								<br>
 								<li><label>Password:</label></li>
-								<li><input type="text" name="password" id="password" required="required"></li>
+								<li><input type="password" name="password" id="password" required="required"></li>
 							</ul>
 							<input type="submit" value="Sign In">
 						</form>
@@ -74,10 +74,10 @@
 									<li><input type="text" name="email" id="email" required="required"></li>
 									<br>
 									<li><label>Password:</label></li>
-									<li><input type="text" name="pass" id="pass" required="required"></li>
+									<li><input type="password" name="pass" id="pass" required="required"></li>
 									<br>
 									<li><label>Confirm Password:</label></li>
-									<li><input type="text" name="confirmpass" id="confirmpass" required="required"></li>
+									<li><input type="password" name="confirmpass" id="confirmpass" required="required"></li>
 								</fieldset>
 								<fieldset>
 									<legend>Dog</legend>
