Formatted the sign in page

--- a/signIn.html
+++ b/signIn.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming</title>
         <link rel="stylesheet" href="style/base.css">
+        <link rel="stylesheet" href="style/SignIn.css">
     </head>
     
     <body>
@@ -95,7 +96,7 @@
 				</div>
 			</div>
         </div>
-		<footer>
+		<footer id="footer">
 		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
         </div>
