Added links and linked stylesheet.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>About Us</title>
+        <link rel="stylesheet" href="style/Base.css" type="text/css">
     </head>
     <body>
         <div id="signin">
