Fixed title and stylesheet.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,8 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>About Us</title>
-        <link rel="stylesheet" href="style/Base.css" type="text/css">
+        <title>Jojo's Dog Grooming - About Us</title>
+        <link rel="stylesheet" href="style/base.css">
     </head>
     <body>
         <div id="signin">
