linked the pricing

--- a/Pricing.html
+++ b/Pricing.html
@@ -11,7 +11,7 @@
     <body>
         
         <div id="signin">
-            <a href="#">sign in/register</a>
+            <a href="signIn.html">sign in/register</a>
         </div> 
         <header>
 			<h1>Jojo's Dog Grooming</h1>
@@ -19,17 +19,17 @@
         <nav>
             <div class="dropdown">
                 <ul id="nav">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#" id="drop">Services</a>
+                    <li><a href="aboutUs.html">About Us</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
 						    <ul>
-                                <li><a href="#">Pricing</a></li>
-					            <li><a href="#">Booking</a></li>
-					            <li><a href="#">FAQs</a></li>
+                                <li><a href="pricing.html">Pricing</a></li>
+					            <li><a href="booking.html">Booking</a></li>
+					            <li><a href="faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="contactUs.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
