--- a/FAQs.html
+++ b/FAQs.html
@@ -6,7 +6,29 @@
         <title>FAQs</title>
     </head>
     <body>
-        
+        <div id="signin">
+            <a href="signIn.html">sign in/register</a>
+        </div> 
+            <header>
+			    <h1>Jojo's Dog Grooming</h1>
+		    </header>
+        <nav>
+            <div class="dropdown">
+                <ul id="nav">
+                    <li><a href="aboutUs.html">About Us</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="services.html" id="drop">Services</a>
+					    <div class="dropdowncontent">
+						    <ul>
+                                <li><a href="pricing.html">Pricing</a></li>
+					            <li><a href="booking.html">Booking</a></li>
+					            <li><a href="faqs.html">FAQs</a></li>
+                            </ul>
+			            </div></li>
+                    <li><a href="contactUs.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </nav>
         <div id="Questions">
             
             <h1>Frequently Asked Questions</h1>
