--- a/account.html
+++ b/account.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Jojo's Dog Grooming</title>
+        <title>Jojo's Dog Grooming - Account</title>
         <link rel="stylesheet" href="style/base.css">
     </head>
     
