--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div id="signin">
             <a href="signIn.html">sign in/register</a>
         </div> 
-            <header>
-			    <h1>Jojo's Dog Grooming</h1>
-		    </header>
+        <header>
+			<a href="index.html"><h1>Jojo's Dog Grooming</h1></a>
+		</header>
         <nav>
             <div class="dropdown">
                 <ul id="nav">
