--- a/FAQs.html
+++ b/FAQs.html
@@ -9,9 +9,9 @@
         <div id="signin">
             <a href="signIn.html">sign in/register</a>
         </div> 
-            <header>
-			    <h1>Jojo's Dog Grooming</h1>
-		    </header>
+        <header>
+			<a href="index.html"><h1>Jojo's Dog Grooming</h1></a>
+		</header>
         <nav>
             <div class="dropdown">
                 <ul id="nav">
@@ -29,6 +29,7 @@
                 </ul>
             </div>
         </nav>
+        
         <div id="Questions">
             
             <h1>Frequently Asked Questions</h1>
