--- a/Pricing.html
+++ b/Pricing.html
@@ -14,7 +14,7 @@
             <a href="signIn.html">sign in/register</a>
         </div> 
         <header>
-			<h1>Jojo's Dog Grooming</h1>
+		    <a href="index.html"><h1>Jojo's Dog Grooming</h1></a>
 		</header>
         <nav>
             <div class="dropdown">
