--- a/accountEdit.html
+++ b/accountEdit.html
@@ -10,15 +10,15 @@
     <body>
         
         <div id="signin">
-            <a href="signin.html">sign in/register</a>
+            <a href="signIn.html">sign in/register</a>
         </div> 
         <header>
-			<h1>Jojo's Dog Grooming</h1>
+		    <a href="index.html"><h1>Jojo's Dog Grooming</h1></a>
 		</header>
         <nav>
             <div class="dropdown">
                 <ul id="nav">
-                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
@@ -28,7 +28,7 @@
 					            <li><a href="faqs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
-                    <li><a href="contactus.html">Contact Us</a></li>
+                    <li><a href="contactUs.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
