--- a/FAQs.html
+++ b/FAQs.html
@@ -3,7 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>FAQs</title>
+        <title>Jojo's Dog Grooming - FAQs</title>
+        <link rel="stylesheet" href="style/base.css">
     </head>
     <body>
         <div id="signin">
