--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						    <ul>
                                 <li><a href="pricing.html">Pricing</a></li>
 					            <li><a href="booking.html">Booking</a></li>
-					            <li><a href="faqs.html">FAQs</a></li>
+					            <li><a href="FAQs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
                     <li><a href="contactUs.html">Contact Us</a></li>
@@ -52,9 +52,9 @@ Vivamus purus mi, fringilla id viverra at, blandit finibus orci. In consequat ul
 Maecenas vel nibh felis. Sed vel enim vel nunc sagittis pharetra at at magna. Vestibulum eu nisl massa. Fusce rhoncus dignissim eros ac sagittis. Cras condimentum felis non est pulvinar fringilla. Duis in dignissim leo, ac consectetur mauris. Aliquam hendrerit, lectus vitae convallis porttitor, nunc justo semper sem, a tristique mauris enim cursus tortor. Mauris sit amet scelerisque nunc. Nam molestie porttitor lorem vel scelerisque. In quis euismod nulla. Aliquam volutpat metus at ex tristique consectetur. Aliquam aliquet bibendum ante in luctus. Nulla convallis urna nec tempus luctus. In eget lectus euismod, semper diam ac, posuere metus.
 				</p>
 			</div>
-		<footer>
+		</div>
+        <footer>
 		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
-        </div>
     </body>
 </html>
