--- a/signIn.html
+++ b/signIn.html
@@ -26,7 +26,7 @@
 						    <ul>
                                 <li><a href="pricing.html">Pricing</a></li>z
 					            <li><a href="booking.html">Booking</a></li>
-					            <li><a href="faqs.html">FAQs</a></li>
+					            <li><a href="FAQs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
                     <li><a href="contactUs.html">Contact Us</a></li>
