Created services page

--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Services</title>
         <link rel="stylesheet" href="style/base.css">
+        <link rel="stylesheet" href="style/services.css">
     </head>
     
     <body>
@@ -36,11 +37,43 @@
 		<div id="content">
             <div id="leftcol">
 				<h2></h2>
-				<img src="images/placeholder.jpg">
+				<img src="images/placeholder.jpg" width="300" height="300">
 			</div>
             
 			<div id="rightcol">
-				<h2></h2>
+				<h2>Services</h2>
+                <table id="table" style="width:100%">
+                <tr>
+                    <td><a href="pricing.html">Pricing</a></td> 
+                </tr>
+                <tr>
+                    <td id="td1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nunc tempor augue at massa varius aliquet. Integer auctor 
+                        hendrerit ex non dapibus. Maecenas sit amet urna vulputate, 
+                        iaculis turpis suscipit, aliquet tortor. In accumsan nec 
+                        nisi sed volutpat.</td>
+                </tr>
+                <tr>
+                    <td><a href="booking.html">Booking</a></td>
+                </tr>
+                <tr>
+                    <td id="td2">In accumsan nec augue at massa varius aliquet. Integer auctor 
+                        nisi sed volutpat. Vivamus placerat pharetra lacus, ut lacinia
+                        lectus pellentesque eget. Nunc vestibulum orci nisi, in 
+                        vestibulum justo mattis posuere. Aenean laoreet dolor eu auctor
+                        pretium. Morbi sodales ultrices tortor sed finibus.</td>
+                </tr>
+                 <tr>
+                    <td><a href="faqs.html">FAQs</a></td>
+                </tr>
+                <tr>
+                    <td id="id3">In accumsan nec augue at massa varius alique consectetur 
+                    nisi sed volutpat. Vivamus placerat pharetra lacus, ut lacinia
+                    lectus pellentesque eget. Nunc vestibulum orci nisi, in 
+                    vestibulum justo mattis posuere. Aenean laoreet dolor eu auctor
+                    pretium. Morbi sodales ultrices tortor sed finibus.</td>
+                </tr>
+                </table>
 			</div>
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
