update to sign in and account edit style pages.

--- a/signIn.html
+++ b/signIn.html
@@ -42,10 +42,10 @@
 						<form name="signin" method="post" id="signin">
 							<ul>
 								<li><label>Email:</label></li>
-								<li><input type="text" name="signinemail" id="signinemail" required="required"></li>
+								<li><input type="text" name="signinemail" id="signinemail" size="30" required="required"></li>
 								<br>
 								<li><label>Password:</label></li>
-								<li><input type="password" name="password" id="password" required="required"></li>
+								<li><input type="password" name="password" id="password" size="30" required="required"></li>
 							</ul>
 							<input type="submit" value="Sign In">
 						</form>
@@ -92,7 +92,7 @@
 									<li><input type="submit" value="Add Dog"></li>
 								</fieldset>
 								<br>
-								<li id="registerbutton"><input type="submit" value="Register"></li>
+								<li id="submitbutton"><input type="submit" value="Register"></li>
 							</ul>
 						</form>
 					</div>
