--- a/signIn.html
+++ b/signIn.html
@@ -24,7 +24,7 @@
                     <li><a href="services.html" id="drop">Services</a>
 					    <div class="dropdowncontent">
 						    <ul>
-                                <li><a href="pricing.html">Pricing</a></li>z
+                                <li><a href="pricing.html">Pricing</a></li>
 					            <li><a href="booking.html">Booking</a></li>
 					            <li><a href="FAQs.html">FAQs</a></li>
                             </ul>
