--- a/testimonials.html
+++ b/testimonials.html
@@ -36,11 +36,14 @@
 		<div id="content">
             <div id="leftcol">
 				<h2></h2>
-				<img src="images/placeholder.jpg">
+</div>
 			</div>
             
 			<div id="rightcol">
-				<h2></h2>
+				<h2>Testimonials</h2>
+                <ul>
+                    <li><img src="images/placeholder.jpg" width="300" height="300">
+                    </li></ul>
 			</div>
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
