--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,7 +11,8 @@
             <a href="signIn.html">sign in/register</a>
         </div> 
         <header>
-			<a href="index.html"><h1>Jojo's Dog Grooming</h1></a>
+			<a href="index.html"><h1><img src="Images/logo.png"
+                 width="200" height="200" alt="Jojo's Dog Grooming-Home"></h1></a>
 		</header>
         <nav>
             <div class="dropdown">
