fixed the columns

--- a/testimonials.html
+++ b/testimonials.html
@@ -13,7 +13,8 @@
             <a href="signIn.html">sign in/register</a>
         </div> 
         <header>
-		    <a href="index.html"><h1>Jojo's Dog Grooming</h1></a>
+		    <a href="index.html"><h1><img src="Images/logo.png"
+                 width="200" height="200" alt="Jojo's Dog Grooming-Home"></h1></a>
 		</header>
         <nav>
             <div class="dropdown">
@@ -38,7 +39,6 @@
 				<h2>Testimonials</h2>
                 
             </div>
-		</div>
             
 			<div id="rightcol">
 				<h2>Dog Gallery</h2>
@@ -59,8 +59,9 @@
                         <br>Dog</span>
                     </li>
                     <li><span><img src="images/placeholder.jpg" width="300" height="300">
-                        <br>Dog</span></ul>
+                        <br>Dog</span>
                     </li>
+                </ul>
 			</div>
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
