Added print css to pages.

--- a/services.html
+++ b/services.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Services</title>
-        <link rel="stylesheet" href="style/base.css">
-        <link rel="stylesheet" href="style/services.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/services.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     
     <body>
