--- a/signIn.html
+++ b/signIn.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Sign In/Register</title>
-        <link rel="stylesheet" href="style/base.css">
-        <link rel="stylesheet" href="style/SignIn.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/SignIn.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     
     <body>
