--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Testimonials</title>
-        <link rel="stylesheet" href="style/base.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     
     <body>
