--- a/FAQs.html
+++ b/FAQs.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - FAQs</title>
-        <link rel="stylesheet" href="style/base.css">
-        <link rel="stylesheet" href="style/FAQs.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/FAQs.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     <body>
         <div id="signin">
