--- a/Pricing.html
+++ b/Pricing.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Pricing</title>
-        <link rel="stylesheet" href="style/base.css">
-        <link rel="stylesheet" href="style/Pricing.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/Pricing.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     
     <body>
