--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - About Us</title>
-        <link rel="stylesheet" href="style/base.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     <body>
         <div id="signin">
