--- a/account.html
+++ b/account.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Account</title>
-        <link rel="stylesheet" href="style/base.css">
-		<link rel="stylesheet" href="style/signin.css">
+        <link rel="stylesheet" href="style/base.css" media="screen">
+		<link rel="stylesheet" href="style/signin.css" media="screen">
+        <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     
     <body>
