--- a/testimonials.html
+++ b/testimonials.html
@@ -42,26 +42,20 @@
             </div>
             
 			<div id="rightcol">
-				<h2>Dog Gallery</h2>
+				<h2>Gallery</h2>
                 <div id="gallery">
                 <ul>
-                    <li><img src="images/placeholder.jpg" width="300" height="300"
-                         alt="Dog">
+                    <li><img src="images/placeholder.jpg" width="200" height="200">
                     </li>
-                    <li><span><img src="images/placeholder.jpg" width="300" height="300">
-                        <br>Dog</span>
+                    <li><img src="images/placeholder.jpg" width="200" height="200">
                     </li>
-                    <li><span><img src="images/placeholder.jpg" width="300" height="300">
-                        <br>Dog</span>
+                    <li><img src="images/placeholder.jpg" width="200" height="200">
                     </li>
-                    <li><span><img src="images/placeholder.jpg" width="300" height="300">
-                        <br>Dog</span>
+                    <li><img src="images/placeholder.jpg" width="200" height="200">
                     </li>
-                    <li><span><img src="images/placeholder.jpg" width="300" height="300">
-                        <br>Dog</span>
+                    <li><img src="images/placeholder.jpg" width="200" height="200">
                     </li>
-                    <li><span><img src="images/placeholder.jpg" width="300" height="300">
-                        <br>Dog</span>
+                    <li><img src="images/placeholder.jpg" width="200" height="200">
                     </li>
                  </div>
 
