created the alternate html

--- a/testimonials.html
+++ b/testimonials.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Testimonials</title>
         <link rel="stylesheet" href="style/base.css" media="screen">
+        <link rel="stylesheet" href="style/testimonials.css" media="screen">
         <link rel="stylesheet" href="style/printStyle.css" media="print">
     </head>
     
