--- a/testimonials.html
+++ b/testimonials.html
@@ -42,7 +42,18 @@
 		<div id="content">
             <div id="leftcol">
 				<h2>Testimonials</h2>
-                
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas 
+                   porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies,
+                   purus lectus malesuada libero, sit amet commodo magna eros quis urna.
+                   </p>
+                   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac 
+                   turpis egestas. Donec laoreet nonummy augue. Suspendisse dui purus, scelerisque
+                   at, vulputate vitae, pretium mattis, nunc. </p>
+                   <p>Mauris eget neque at sem venenatis eleifend. Donec hendrerit, felis et 
+                   imperdiet euismod, purus ipsum pretium metus, in lacinia nulla nisl eget sapien. 
+                   Donec ut est in lectus consequat consequat.
+                   Etiam eget dui. Aliquam erat volutpat. Sed at lorem in nunc porta tristique. Proin nec augue.
+                </p>
             </div>
             
 			<div id="rightcol">
