Made images links

--- a/testimonials.html
+++ b/testimonials.html
@@ -60,17 +60,17 @@
 				<h2>Gallery</h2>
                 <div id="gallery">
                 <ul>
-                    <li><img src="images/placeholder.jpg" width="200" height="200">
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
                     </li>
-                    <li><img src="images/placeholder.jpg" width="200" height="200">
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
                     </li>
-                    <li><img src="images/placeholder.jpg" width="200" height="200">
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
                     </li>
-                    <li><img src="images/placeholder.jpg" width="200" height="200">
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
                     </li>
-                    <li><img src="images/placeholder.jpg" width="200" height="200">
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
                     </li>
-                    <li><img src="images/placeholder.jpg" width="200" height="200">
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
                     </li>
                  </div>
 
