--- a/services.html
+++ b/services.html
@@ -44,38 +44,26 @@
             
 			<div id="rightcol">
 				<h2>Services</h2>
-                <table id="table" style="width:100%">
-                <tr>
-                    <td><a href="pricing.html">Pricing</a></td> 
-                </tr>
-                <tr>
-                    <td id="td1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                <div id="services">
+                    <h3><a href="pricing.html">Pricing</a></h3> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                         Nunc tempor augue at massa varius aliquet. Integer auctor 
                         hendrerit ex non dapibus. Maecenas sit amet urna vulputate, 
                         iaculis turpis suscipit, aliquet tortor. In accumsan nec 
-                        nisi sed volutpat.</td>
-                </tr>
-                <tr>
-                    <td><a href="booking.html">Booking</a></td>
-                </tr>
-                <tr>
-                    <td id="td2">In accumsan nec augue at massa varius aliquet. Integer auctor 
+                        nisi sed volutpat.</p>
+                    <h3><a href="booking.html">Booking</a></h3>
+                    <p>In accumsan nec augue at massa varius aliquet. Integer auctor 
                         nisi sed volutpat. Vivamus placerat pharetra lacus, ut lacinia
                         lectus pellentesque eget. Nunc vestibulum orci nisi, in 
                         vestibulum justo mattis posuere. Aenean laoreet dolor eu auctor
-                        pretium. Morbi sodales ultrices tortor sed finibus.</td>
-                </tr>
-                 <tr>
-                    <td><a href="faqs.html">FAQs</a></td>
-                </tr>
-                <tr>
-                    <td id="id3">In accumsan nec augue at massa varius alique consectetur 
+                        pretium. Morbi sodales ultrices tortor sed finibus.</p>
+                    <h3><a href="faqs.html">FAQs</a></h3>
+                    <p>In accumsan nec augue at massa varius alique consectetur 
                     nisi sed volutpat. Vivamus placerat pharetra lacus, ut lacinia
                     lectus pellentesque eget. Nunc vestibulum orci nisi, in 
                     vestibulum justo mattis posuere. Aenean laoreet dolor eu auctor
-                    pretium. Morbi sodales ultrices tortor sed finibus.</td>
-                </tr>
-                </table>
+                    pretium. Morbi sodales ultrices tortor sed finibus.</p>
+                </div>
 			</div>
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
