--- a/signIn.html
+++ b/signIn.html
@@ -42,13 +42,16 @@
 					<h2>Sign In</h2>
 					<div id="signinform">
 						<form name="signin" method="post" id="signin" action="http://webdevfoundations.net/scripts/formdemo.asp">
-							<ul>
-								<li><label for="email">Email:</label></li>
-								<li><input type="text" name="signinemail" id="signinemail" size="30" required="required"></li>
-								<br>
-								<li><label for="password">Password:</label></li>
-								<li><input type="password" name="password" id="password" size="30" required="required"></li>
-							</ul>
+							<label for="email">Email:</label>
+							<br>
+							<input type="text" name="signinemail" id="signinemail" size="30" required="required">
+							<br>
+							<br>
+							<label for="password">Password:</label>
+							<br>
+							<input type="password" name="password" id="password" size="30" required="required">
+							<br>
+							<br>
 							<input type="submit" value="Sign In">
 						</form>
 						<img src="Images/placeholder.jpg" height="250" width="250" alt="placeholder">
@@ -61,41 +64,53 @@
 					<h2>Register</h2>
 					<div id="registerform">
 						<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp">
-							<ul>
-								<fieldset>
-									<legend>Owner</legend>
-									<li><label for="firstname">First Name:</label></li>
-									<li><input type="text" name="firstname" id="firstname" size="60" required="required"></li>
-									<br>
-									<li><label for="lastname">Last Name:</label></li>
-									<li><input type="text" name="lastname" id="lastname" size="60" required="required"></li>
-									<br>
-									<li><label for="phone">Phone Number:</label></li>
-									<li><input type="text" name="phone" id="phone" size="60" required="required"></li>
-									<br>
-									<li><label for="email">Email:</label></li>
-									<li><input type="text" name="email" id="email" size="60" required="required"></li>
-									<br>
-									<li><label for="pass">Password:</label></li>
-									<li><input type="password" name="pass" id="pass" size="60" required="required"></li>
-									<br>
-									<li><label for"confirmpass">Confirm Password:</label></li>
-									<li><input type="password" name="confirmpass" id="confirmpass" size="60" required="required"></li>
-								</fieldset>
+							<fieldset>
+								<legend>Owner</legend>
+								<label for="firstname">First Name:</label>
 								<br>
-								<fieldset>
-									<legend>Dog</legend>
-									<li><label for="dogname">Dog Name:</label></li>
-									<li><input type="text" name="dogname" id="dogname" size="60" required="required"></li>
-									<br>
-									<li><label for"dogbreed">Dog Breed:</label></li>
-									<li><input type="text" name="dogbreed" id="dogbreed" size="60" required="required"></li>
-									<br>
-									<li><input type="submit" value="Add Dog"></li>
-								</fieldset>
+								<input type="text" name="firstname" id="firstname" size="60" required="required">
 								<br>
-								<li id="submitbutton"><input type="submit" value="Register"></li>
-							</ul>
+								<br>
+								<label for="lastname">Last Name:</label>
+								<br>
+								<input type="text" name="lastname" id="lastname" size="60" required="required">
+								<br>
+								<br>
+								<label for="phone">Phone Number:</label>
+								<br>
+								<input type="text" name="phone" id="phone" size="60" required="required">
+								<br>
+								<br>
+								<label for="email">Email:</label>
+								<br>
+								<input type="text" name="email" id="email" size="60" required="required">
+								<br>
+								<br>
+								<label for="pass">Password:</label>
+								<br>
+								<input type="password" name="pass" id="pass" size="60" required="required">
+								<br>
+								<br>
+								<label for"confirmpass">Confirm Password:</label><br>
+								<input type="password" name="confirmpass" id="confirmpass" size="60" required="required">
+							</fieldset>
+							<br>
+							<fieldset>
+								<legend>Dog</legend>
+								<label for="dogname">Dog Name:</label>
+								<br>
+								<input type="text" name="dogname" id="dogname" size="60" required="required">
+								<br>
+								<br>
+								<label for"dogbreed">Dog Breed:</label>
+								<br>
+								<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
+								<br>
+								<br>
+								<a href="#">Add Dog</a>
+							</fieldset>
+							<br>
+							<id="submitbutton"><input type="submit" value="Register">
 						</form>
 					</div>
 				</div>
