Added footer to FAQs and fixed validation errors. Fixed validation errors on booking and contact us.

--- a/FAQs.html
+++ b/FAQs.html
@@ -56,15 +56,17 @@
                         <h2>Answers</h2>
                             <ul>
 
-                                <li><a name="Answer1"><h3>Answer 1</h3></a></li>
-                                <li><a name="Answer2"><h3>Answer 2</h3></a></li>
-                                <li><a name="Answer3"><h3>Answer 3</h3></a></li>
-                                <li><a name="Answer4"><h3>Answer 4</h3></a></li>
+                                <li><a id="Answer1"><h3>Answer 1</h3></a></li>
+                                <li><a id="Answer2"><h3>Answer 2</h3></a></li>
+                                <li><a id="Answer3"><h3>Answer 3</h3></a></li>
+                                <li><a id="Answer4"><h3>Answer 4</h3></a></li>
                                 
                             </ul>
                     </div>
             </div>
         </div>
-
+        <footer>
+		    <p>Facebook, Instagram, Twitter</p>
+		</footer>
     </body>
 </html>
