--- a/booking.html
+++ b/booking.html
@@ -26,7 +26,7 @@
 					    <div class="dropdowncontent">
 						    <ul>
                                 <li><a href="pricing.html">Pricing</a></li>
-					            <li><a href="booking.html">Booking</a></li>c
+					            <li><a href="booking.html">Booking</a></li>
 					            <li><a href="FAQs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
@@ -60,6 +60,5 @@
 		<footer>
 		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
-        </div>
     </body>
 </html>
