fixed validation errors maaaaaaaaaaaaan

--- a/services.html
+++ b/services.html
@@ -38,8 +38,7 @@
         
 		<div id="content">
             <div id="leftcol">
-				<h2></h2>
-				<img src="images/placeholder.jpg" width="300" height="300">
+				<img src="images/placeholder.jpg" width="300" height="300" alt="Dog">
 			</div>
             
 			<div id="rightcol">
