validation fix to account edit

--- a/accountEdit.html
+++ b/accountEdit.html
@@ -44,33 +44,44 @@
 			<div id="rightcol">
 				<h2>Account</h2>
 				<form name="accountEdit" method="post" id="accountEdit" action="http://webdevfoundations.net/scripts/formdemo.asp">
-					<ul>
-						<fieldset>
-							<legend>Owner</legend>
-							<li><label for="firstname">First Name:</label></li>
-							<li><input type="text" name="firstname" id="firstname" size="60" required="required"></li>
-							<br>
-							<li><label for="lastname">Last Name:</label></li>
-							<li><input type="text" name="lastname" id="lastname" size="60" required="required"></li>
-							<br>
-							<li><label for="phone">Phone Number:</label></li>
-							<li><input type="text" name="phone" id="phone" size="60" required="required"></li>
-							<br>
-							<li><label for="email">Email:</label></li>
-							<li><input type="text" name="email" id="email" size="60" required="required"></li>
-						</fieldset>
+					<fieldset>
+						<legend>Owner</legend>
+						<label for="firstname">First Name:</label></li>
 						<br>
-						<fieldset>
-							<legend>Dog</legend>
-							<li><label for="dogname">Dog Name: </label></li>
-							<li><input type="text" name="dogname" id="dogname" size="60" required="required"></li><br>
-							<li><label for="dogbreed">Dog Breed: </label></li>
-							<li><input type="text" name="dogbreed" id="dogbreed" size="60" required="required"></li><br>
-							<input type="submit" value="Add Dog">
-						</fieldset>
+						<input type="text" name="firstname" id="firstname" size="60" required="required">
 						<br>
-						<li id="submitbutton"><input type="submit" value="Save Changes"></li>
-					</ul>
+						<br>
+						<label for="lastname">Last Name:</label></li>
+						<br>
+						<input type="text" name="lastname" id="lastname" size="60" required="required">
+						<br>
+						<br>
+						<label for="phone">Phone Number:</label></li>
+						<br>
+						<input type="text" name="phone" id="phone" size="60" required="required">
+						<br>
+						<br>
+						<label for="email">Email:</label></li>
+						<br>
+						<input type="text" name="email" id="email" size="60" required="required">
+					</fieldset>
+					<br>
+					<fieldset>
+						<legend>Dog</legend>
+						<label for="dogname">Dog Name: </label>
+						<br>
+						<input type="text" name="dogname" id="dogname" size="60" required="required">
+						<br>
+						<br>
+						<label for="dogbreed">Dog Breed: </label>
+						<br>
+						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
+						<br>
+						<br>
+						<input type="submit" value="Add Dog">
+					</fieldset>
+					<br>
+					<a href="#">Add Dog</a>
 				</form>
 			</div>
         </div>
