--- a/FAQs.html
+++ b/FAQs.html
@@ -28,7 +28,7 @@
 					            <li><a href="FAQs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
-                    <li><a href="contactUs.html">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
