--- a/signIn.html
+++ b/signIn.html
@@ -31,7 +31,7 @@
 					            <li><a href="FAQs.html">FAQs</a></li>
                             </ul>
 			            </div></li>
-                    <li><a href="contactUs.html">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
