--- a/signIn.html
+++ b/signIn.html
@@ -37,87 +37,79 @@
         
 		<div id="content">
             <div id="leftcol">
-				<div id="signin">
-					<h2>Sign In</h2>
-					<div id="signinform">
-						<form name="signin" method="post" id="signin" action="http://webdevfoundations.net/scripts/formdemo.asp">
-							<label for="email">Email:</label>
-							<br>
-							<input type="text" name="signinemail" id="signinemail" size="30" required="required">
-							<br>
-							<br>
-							<label for="password">Password:</label>
-							<br>
-							<input type="password" name="password" id="password" size="30" required="required">
-							<br>
-							<br>
-							<input type="submit" value="Sign In">
-						</form>
-						<img src="Images/placeholder.jpg" height="250" width="250" alt="placeholder">
-					</div>
-				</div>
+				<h2>Sign In</h2>
+					<form name="signinform" method="post" id="signinform" action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<label for="email">Email:</label>
+					<br>
+					<input type="text" name="signinemail" id="signinemail" size="30" required="required">
+					<br>
+					<br>
+					<label for="password">Password:</label>
+					<br>
+					<input type="password" name="password" id="password" size="30" required="required">
+					<br>
+					<br>
+					<input type="submit" value="Sign In">
+				</form>
+				<img src="Images/placeholder.jpg" height="250" width="250" alt="placeholder">
 			</div>
             
 			<div id="rightcol">
-				<div id="register">
-					<h2>Register</h2>
-					<div id="registerform">
-						<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp">
-							<fieldset>
-								<legend>Owner</legend>
-								<label for="firstname">First Name:</label>
-								<br>
-								<input type="text" name="firstname" id="firstname" size="60" required="required">
-								<br>
-								<br>
-								<label for="lastname">Last Name:</label>
-								<br>
-								<input type="text" name="lastname" id="lastname" size="60" required="required">
-								<br>
-								<br>
-								<label for="phone">Phone Number:</label>
-								<br>
-								<input type="text" name="phone" id="phone" size="60" required="required">
-								<br>
-								<br>
-								<label for="email">Email:</label>
-								<br>
-								<input type="text" name="email" id="email" size="60" required="required">
-								<br>
-								<br>
-								<label for="pass">Password:</label>
-								<br>
-								<input type="password" name="pass" id="pass" size="60" required="required">
-								<br>
-								<br>
-								<label for"confirmpass">Confirm Password:</label><br>
-								<input type="password" name="confirmpass" id="confirmpass" size="60" required="required">
-							</fieldset>
-							<br>
-							<fieldset>
-								<legend>Dog</legend>
-								<label for="dogname">Dog Name:</label>
-								<br>
-								<input type="text" name="dogname" id="dogname" size="60" required="required">
-								<br>
-								<br>
-								<label for"dogbreed">Dog Breed:</label>
-								<br>
-								<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
-								<br>
-								<br>
-								<a href="#">Add Dog</a>
-							</fieldset>
-							<br>
-							<id="submitbutton"><input type="submit" value="Register">
-						</form>
-					</div>
-				</div>
+				<h2>Register</h2>
+					<form name="register" method="post" id="register" action="http://webdevfoundations.net/scripts/formdemo.asp">
+						<fieldset>
+						<legend>Owner</legend>
+						<label for="firstname">First Name:</label>
+						<br>
+						<input type="text" name="firstname" id="firstname" size="60" required="required">
+						<br>
+						<br>
+						<label for="lastname">Last Name:</label>
+						<br>
+						<input type="text" name="lastname" id="lastname" size="60" required="required">
+						<br>
+						<br>
+						<label for="phone">Phone Number:</label>
+						<br>
+						<input type="text" name="phone" id="phone" size="60" required="required">
+						<br>
+						<br>
+						<label for="email">Email:</label>
+						<br>
+						<input type="text" name="email" id="email" size="60" required="required">
+						<br>
+						<br>
+						<label for="pass">Password:</label>
+						<br>
+						<input type="password" name="pass" id="pass" size="60" required="required">
+						<br>
+						<br>
+						<label for="confirmpass">Confirm Password:</label>
+						<br>
+						<input type="password" name="confirmpass" id="confirmpass" size="60" required="required">
+					</fieldset>
+					<br>
+					<fieldset>
+						<legend>Dog</legend>
+						<label for="dogname">Dog Name:</label>
+						<br>
+						<input type="text" name="dogname" id="dogname" size="60" required="required">
+						<br>
+						<br>
+						<label for="dogbreed">Dog Breed:</label>
+						<br>
+						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
+						<br>
+						<br>
+						<a href="#">Add Dog</a>
+					</fieldset>
+					<br>
+					<input type="submit" value="Register">
+				</form>
 			</div>
         </div>
 		<footer id="footer">
 		    <p>Facebook, Instagram, Twitter</p>
 		</footer>
-        </div>
     </body>
 </html>
