--- a/testimonials.html
+++ b/testimonials.html
@@ -57,21 +57,20 @@
 				<h2>Gallery</h2>
                 <div id="gallery">
                 <ul>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
-                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200"></a>
+                    <li><a href="#"><img src="images/placeholder.jpg" width="200" height="200" alt="Dog"></a>
                     </li>
+                 </ul>
                  </div>
-
-                </ul>
 
 			</div>
         </div>
